{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "c1f5eca8-b303-4157-940c-bddd4cb47f88",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "65e80708-b9f2-42ba-a845-a9cf737c1d82",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "7725e402-a505-41fc-aa5d-a95b86862a9a",
                    "name": "jump",
                    "type": "Button",
                    "id": "20eb9100-6efc-447b-aaff-45ffb8e06ce2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "29df2af9-183e-4a50-ad04-f26fca72208a",
                    "name": "mousePosition",
                    "type": "Value",
                    "id": "f8fa7e22-884d-49de-8149-527e4ef2c898",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "click",
                    "type": "Button",
                    "id": "65fec5f3-5d88-462f-a8d0-69e0a822c696",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "run",
                    "type": "Button",
                    "id": "86a66a36-299c-4354-88d2-1877915e913b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleBuildMode",
                    "type": "Button",
                    "id": "34826f1f-938b-47e5-a470-849fb9f06cae",
                    "name": "pause",
                    "type": "Button",
                    "id": "b26992c1-c9a7-46f2-b627-4932786f2701",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75584ca3-8a21-4ac3-b9ea-d7e5c417a71f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fc5ab156-b3c7-4021-9c14-bd863c186880",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "983e44ea-0e83-459a-90ed-4292ec0128b0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1c103885-2b9e-40bd-9ca5-bb3834acce12",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d8afd448-00a9-4f57-b898-6de2b5d810d8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "38ce843d-af02-48b1-a49e-5689f4c36301",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dbae7b98-1b3a-4fc7-80f5-dd2e754d0a33",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "id": "6782a067-cbe3-498a-a3a8-069d8f336a18",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c922652a-f322-4927-8f24-d74e67d697ec",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "id": "779c40ad-eae3-4014-a0c5-06e14e9e46a7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29f4dc0f-e8dd-4794-8613-08a98c150634",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerBuilding",
            "id": "4ea8e58f-680e-42fa-9d01-dc14e28f52c8",
            "actions": [
                {
                    "name": "RotateObject",
                    "type": "Button",
                    "id": "99e6f0e3-0660-466d-af17-80b2de973032",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "e3b67906-0399-488f-9857-284038cb55e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelBuild",
                    "type": "Button",
                    "id": "cdb125ae-fcf3-4d6a-8003-3bad762a1b6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleBuildMode",
                    "type": "Button",
                    "id": "8d3df5f5-2a34-4623-97da-487908cee101",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartBuilding",
                    "type": "Button",
                    "id": "7e7e7ba6-6df5-4fe1-bfff-6f13136de612",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f61707b-329b-45ef-9e4a-85825dd024e1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24e24e7b-6751-41ec-a355-62a4fa493d33",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18485b8e-ddc6-416a-9726-90d92c793758",
                    "id": "4282716b-662b-4ed2-b352-0440a44e00e5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceObject",
                    "action": "click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcb7ea25-b05b-424f-9b46-f8ea65e949ce",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelBuild",
                    "id": "85b23988-712a-4b2a-9e27-600c81d35c39",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33d8f846-6f05-426e-8e7e-f7dcdd671587",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "519c18aa-bfad-48b9-a158-17eb6582a4fb",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartBuilding",
                    "id": "42c8c9b0-5add-49b8-8b28-056cc359d745",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}